--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 .upper-left{
   background-color: red;
-  background-image:
-    <img src= "a-s345/football.jpg"/>
+  background-image: url(https://static1.squarespace.com/static/5210fc6de4b0717200291402/t/55720510e4b075ba7b7f6139/1433535763899/SportsNation-8096lowres.jpg?format=2500w);
 }
 
 .upper-right{
