--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .upper-left{
-  background-image: <img src="images/football.jpg"/>
+  background-image: url (../images/football.jpg)
 }
 
 .upper-right{
