Messing with img url

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .upper-left{
-  background-image: url (../images/football.jpg)
+  background-image: url (images/football.jpg)
 }
 
 .upper-right{
