upper left image no repeat

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 .upper-left{
   background-color: red;
   background-image: url(https://unsplash.it/200/300?image=73);
+  background-repeat:no-repeat;
 }
 
 .upper-right{
