--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .upper-left{
-  background-image: url(https://unsplash.it/200/300?image=73);
+  background-image: url(https://unsplash.it/?image=73);
   background-repeat:no-repeat;
 }
 
