--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .upper-right{
   background-color: purple;
-  background-image: url(https://unsplash.it/1000/300?photo=P_NdM0ua3lg);
+  background-image: url(https://images.unsplash.com/photo-1434854775064-aa2c72a4aa32?dpr=2&auto=compress,format&fit=crop&w=1199&h=674&q=80&cs=tinysrgb&crop=);
   background-repeat:no-repeat;
 }
 
