--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 
 .lower-left{
   background-color: green;
-  background-image: url(https://static1.squarespace.com/static/5210fc6de4b0717200291402/t/55720510e4b075ba7b7f6139/1433535763899/SportsNation-8096lowres.jpg?format=1000/300);
+  background-image: url(https://images.unsplash.com/photo-1486128105845-91daff43f404?dpr=2&amp);
   background-repeat: no-repeat;
 
 }
