Added closing ) to LR

--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@
 }
 .lower-right{
   background-color: yellow;
-  background-image: url(https://i.ytimg.com/vi/PFNYp-evsiA/maxresdefault.jpg
+  background-image: url(https://i.ytimg.com/vi/PFNYp-evsiA/maxresdefault.jpg)
   background-repeat: no-repeat);
 }
