--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@
 }
 .lower-right{
   background-color: yellow;
-  background-image: url(https://i.ytimg.com/vi/PFNYp-evsiA/maxresdefault.jpg)
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/c/cc/Commonwealth_Stadium_of_Kentucky_-_Kentucky_Wildcats_v.s._Georgia_Bulldogs_-_SEC_football%2C_October_2012_(2012-10-20_by_Navin75).jpg)
   background-repeat: no-repeat);
 }
