--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@
 }
 .lower-right{
   background-color: yellow;
-  background-image: url(http://media7.trover.com/T/526887da323043168a00152d/fixedw_large_4x.jpg)
+  background-image: url(http://www.kentucky.com/latest-news/ljo0y/picture82945482/ALTERNATES/LANDSCAPE_1140/stadium.JPG)
   background-repeat: no-repeat);
 }
