--- a/style.css
+++ b/style.css
@@ -7,34 +7,112 @@
   min-height:200px;
 }
 
-.fill-height-or-more{
-  display: flex;
-  flex-direction: column;
+.jumbotron{
+  background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+      url(https://unsplash.it/1000/300?image=73);
+  background-repeat:no-repeat;
+  background-size:100%;
+  font-size: 100px;
+  font-size: 5vw;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
 
-.fill-height-or-more > div {
-  flex: 1 1 auto;
+h1{
+  font-family: helvetica;
+  color: white;
+  text-align: center;
+  font-size: 100px;
+  font-size: 8vw;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
 }
+
+h4{
+  font-family: helvetica;
+  color: black;
+  text-align: left;
+  font-size: 10px;
+  font-size: 1vw;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+
+p{
+  font-family:'Open Sans', sans-serif;
+  text-align:center;
+  font-size:2em;
+  margin-left:auto;
+  margin-right:auto;
+  padding:1em;
+}
+
+img.class-name{
+  position:absolute;
+  margin:auto;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+}
+
+h2{
+  font-family:helvetica;
+  color:white;
+  text-align: center;
+
 
 .upper-left{
-  background-image: url(https://unsplash.it/1000/300?image=73);
+  background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+    url(https://cdn0.vox-cdn.com/thumbor/PCRsOQNn8QIwfELQTFCWE3XZR5I=/24x0:4983x3306/1310x873/cdn0.vox-cdn.com/uploads/chorus_image/image/47096008/GettyImages-180554412.0.jpg) center;
   background-repeat:no-repeat;
+  background-size: 100%;
+}
+
+.top{
+  background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+    url(https://images.unsplash.com/photo-1485313260896-6e6edf486858?dpr=2&auto=compress,format&fit=crop&w=991&h=661&q=80&cs=tinysrgb&crop=) center;
+  background-repeat:no-repeat;
+  background-size: 100%;
 }
 
 .upper-right{
-  background-color: purple;
-  background-image: url(https://images.unsplash.com/photo-1485313260896-6e6edf486858?dpr=2&auto=compress,format&fit=crop&w=991&h=661&q=80&cs=tinysrgb&crop=);
+    background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+      url(https://unsplash.it/1000/300?image=73) center;
   background-repeat:no-repeat;
+  background-size: 100%;
 }
-
 .lower-left{
-  background-color: green;
-  background-image: url(https://images.unsplash.com/photo-1486128105845-91daff43f404?dpr=2&amp);
+    background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+      url(https://images.unsplash.com/photo-1486128105845-91daff43f404?dpr=2&amp);
   background-repeat: no-repeat;
-
+  background-size: 100%;
 }
-.lower-right{
-  background-color: yellow;
-  background-image: url(http://www.kentucky.com/latest-news/ljo0y/picture82945482/ALTERNATES/LANDSCAPE_1140/stadium.JPG )
-  background-repeat: no-repeat);
+
+.bottom{
+  background: linear-gradient(
+      rgba(40, 0, 0, 0.40),
+      rgba(40, 0, 0, 0.40)
+    ),
+    url(http://www.kentucky.com/latest-news/87xtq2/picture42295680/ALTERNATES/LANDSCAPE_1140/AP110512044147.source.prod_affiliate.79.jpg) center bottom;
+  background-repeat:no-repeat;
+  background-size: 100%;
 }
