--- a/style.css
+++ b/style.css
@@ -35,13 +35,13 @@ h1{
 
 h3{
   font-family: "Black Ops One",cursive;
-  color: black;
-  text-align: left;
+  color: white;
+  text-align: center;
   font-size: 10px;
-  font-size: 1vw;
+  font-size: 8vw;
   margin-left: auto;
   margin-right: auto;
-  padding: 1em;
+
 }
 
 h4{
