--- a/style.css
+++ b/style.css
@@ -63,6 +63,16 @@ p{
   padding:1em;
 }
 
+p2{
+  font-family:'Open Sans', sans-serif;
+  text-align:center;
+  font-size:2em;
+  font-weight:bold;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+
 img.class-name{
   position:absolute;
   margin:auto;
