change color and size p2

--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ p{
 p2{
   font-family:'Open Sans', sans-serif;
   text-align:center;
-  font-color:white;
-  font-size:6em;
+  color:white;
+  font-size:4em;
   margin-left:auto;
   margin-right:auto;
   padding:1em;
