--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ p{
   font-family:'Open Sans', sans-serif;
   text-align:center;
   font-size:2em;
-  color:white;
+  color:black;
   margin-left:auto;
   margin-right:auto;
   padding:1em;
