p font size changed

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h4{
 p{
   font-family:'Open Sans', sans-serif;
   text-align:center;
-  font-size:1em;
+  font-size:6px;
   color:black;
   margin-left:auto;
   margin-right:auto;
