--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p{
 p2{
   font-family:'Open Sans', sans-serif;
   text-align:center;
-  color:white;
+  color:black;
   font-size:4em;
   margin-left:auto;
   margin-right:auto;
