--- a/style.css
+++ b/style.css
@@ -68,10 +68,10 @@ p2{
   font-family:'Open Sans', sans-serif;
   text-align:center;
   color:black;
-  font-size:4em;
+  font-size:2em;
   margin-left:auto;
   margin-right:auto;
-  padding:1
+  padding:1em;
 
 }
 
