--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .image-container{
   min-height:200px;
+  height:100%;
 }
 
 
@@ -80,7 +81,6 @@ p2{
 img.class-name{
   position:absolute;
   margin:auto;
-  height:auto;
   left:0;
   right:0;
   top:0;
