--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .image-container{
-  height:800px;
+  min-height:200px;
 
 }
 
@@ -102,6 +102,7 @@ h2{
       url(https://cdn0.vox-cdn.com/thumbor/PCRsOQNn8QIwfELQTFCWE3XZR5I=/24x0:4983x3306/1310x873/cdn0.vox-cdn.com/uploads/chorus_image/image/47096008/GettyImages-180554412.0.jpg) center;
     background-repeat:no-repeat;
     background-size: 100%;
+    min-height: 700px;
   }
 
 .top{
