--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .image-container{
-  min-height:200px;
+  /*min-height:200px;*/
 
 }
 
@@ -114,6 +114,8 @@ h2{
   background-repeat:no-repeat;
   background-size: 100%;
 
+  min-height: 900px;
+
   }
 
 .upper-right{
@@ -124,6 +126,7 @@ h2{
       url(https://unsplash.it/1000/300?image=73) center;
   background-repeat:no-repeat;
   background-size: 100%;
+    min-height: 900px;
 }
 .lower-left{
     background: linear-gradient(
@@ -133,6 +136,8 @@ h2{
       url(https://images.unsplash.com/photo-1486128105845-91daff43f404?dpr=2&amp)center;
   background-repeat: no-repeat;
   background-size: 100%;
+
+      min-height: 900px;
 }
 
 .bottom{
