tickets image change

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-      url(https://unsplash.it/1000/300?image=73) center;
+      url(http://static.silverchalice.co/kty-prod/2016/03/16/20160316021635_uk_western_3_15_16_14_eh_jpg) center;
   background-repeat:no-repeat;
   background-size: 100%;
 
