--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ p{
   font-family:'Open Sans', sans-serif;
   text-align:center;
   font-size:2em;
-  color:black;
+  color:white;
   margin-left:auto;
   margin-right:auto;
   padding:1em;
