--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ h4{
 p{
   font-family:'Open Sans', sans-serif;
   text-align:center;
-  font-size:2em;
+  font-size:1em;
   color:white;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:1em;
+  margin-right:1em;
   padding:1em;
 }
 
