--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h4{
 
 p1{
   font-family:'Open Sans', sans-serif;
-  text-align:center;
+  text-align:left;
   font-size:1em;
   color:white;
   margin-left:1em;
