--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ p1{
   text-align:left;
   font-size:1em;
   color:white;
-  margin-left:1em;
-  margin-right:1em;
+  margin-left:auto;
+  margin-right:auto;
   padding:1em;
 }
 
