Changed about pic

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-      url(http://static.silverchalice.co/kty-prod/2016/03/16/20160316021635_uk_western_3_15_16_14_eh_jpg) center;
+      url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg) center;
   background-repeat:no-repeat;
   background-size: 100%;
 
