--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2{
         rgba(40, 0, 0, 0.40),
         rgba(40, 0, 0, 0.40)
       ),
-      url(https://cdn0.vox-cdn.com/thumbor/PCRsOQNn8QIwfELQTFCWE3XZR5I=/24x0:4983x3306/1310x873/cdn0.vox-cdn.com/uploads/chorus_image/image/47096008/GettyImages-180554412.0.jpg) center;
+      url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg) center;
     background-repeat:no-repeat;
     background-size: 100%;
     min-height: 900px;
@@ -120,7 +120,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-      url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg) center;
+      url(http://static.silverchalice.co/kty-prod/2016/03/16/20160316021635_uk_western_3_15_16_14_eh_jpg) center;
   background-repeat:no-repeat;
   background-size: 100%;
 
