changed bottom picture

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2{
         rgba(40, 0, 0, 0.40),
         rgba(40, 0, 0, 0.40)
       ),
-      url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg) center;
+      url(https://cdn0.vox-cdn.com/thumbor/PCRsOQNn8QIwfELQTFCWE3XZR5I=/24x0:4983x3306/1310x873/cdn0.vox-cdn.com/uploads/chorus_image/image/47096008/GettyImages-180554412.0.jpg) center;
     background-repeat:no-repeat;
     background-size: 100%;
     min-height: 900px;
@@ -143,7 +143,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-    url(http://www.kentucky.com/latest-news/87xtq2/picture42295680/ALTERNATES/LANDSCAPE_1140/AP110512044147.source.prod_affiliate.79.jpg) center bottom;
+    url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg);
   background-repeat:no-repeat;
   background-size: 100%;
   min-height:900px;
