changed .bottom image

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-    url(http://ksrcollege.wpengine.netdna-cdn.com/wp-content/uploads/2012/03/baseballwinning.jpg);
+    url(http://static.silverchalice.co/kty-prod/2017/03/25/1490409427179-uk_bsb_olemiss_3_24_2017_20_bdh.jpg);
   background-repeat:no-repeat;
   background-size: 100%;
   min-height:900px;
