change about image

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h2{
           rgba(40, 0, 0, 0.40),
           rgba(40, 0, 0, 0.40)
         ),
-        url(http://static.silverchalice.co/kty-prod/2017/03/25/1490409427179-uk_bsb_olemiss_3_24_2017_20_bdh.jpg);
+        url(http://static.silverchalice.co/kty-prod/2016/03/09/20160309010146_uk_cincinnati_3_8_16_08_eh_jpg);
       background-repeat:no-repeat;
       background-size: 100%;
       min-height:900px;
