--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-      url(http://static.silverchalice.co/kty-prod/2016/03/16/20160316021635_uk_western_3_15_16_14_eh_jpg) center;
+      url(http://static.silverchalice.co/kty-prod/2017/01/28/1485573578993-uk_lsu_gymnastics_1_27_17_30_bw.jpg) center;
   background-repeat:no-repeat;
   background-size: 100%;
 
