change sponsor image

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h2{
       rgba(40, 0, 0, 0.40),
       rgba(40, 0, 0, 0.40)
     ),
-      url(https://images.unsplash.com/photo-1486128105845-91daff43f404?dpr=2&amp)center;
+      url(http://static.silverchalice.co/kty-prod/2015/07/22/media__sports_c-track_auto_original_7153727-1437524671380.jpeg)center;
   background-repeat: no-repeat;
   background-size: 100%;
   min-height: 900px;
