changed top image

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h2{
         rgba(40, 0, 0, 0.40),
         rgba(40, 0, 0, 0.40)
       ),
-      url(https://images.unsplash.com/photo-1485313260896-6e6edf486858?dpr=2&auto=compress,format&fit=crop&w=991&h=661&q=80&cs=tinysrgb&crop=) center;
+      url(http://sportslabs-webproxy.imgix.net/http%3A%2F%2Fstatic.silverchalice.co%2Fkty-prod%2F2015%2F12%2F07%2F20151207160941_uk_mizzou_9_26_15_26_bdh_jpg?s=fbd5fdd4125141acb128298323fe1532);
     background-repeat:no-repeat;
     background-size: 100%;
 
